[gd_scene load_steps=4 format=3 uid="uid://dlrebauxx7ouu"]

[ext_resource type="Script" uid="uid://cl6532nuypydp" path="res://scripts/Menu/main_menu.gd" id="1_k0vh8"]
[ext_resource type="PackedScene" uid="uid://clqjpoj3b55dc" path="res://scenes/Menu/registration.tscn" id="2_8mcyk"]
[ext_resource type="PackedScene" uid="uid://cpa7j8377ccab" path="res://scenes/Menu/authentication.tscn" id="3_evs2v"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k0vh8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.501407, 0.501406, 0.501406, 1)

[node name="test" type="CheckButton" parent="ColorRect"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -143.0
offset_top = -100.0
grow_horizontal = 0
grow_vertical = 0
text = "Test mode"

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="IP" type="TextEdit" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "Adress"

[node name="Port" type="TextEdit" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "8000"
placeholder_text = "Port"

[node name="Save" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="Login" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Login"

[node name="CreateLobby" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Create lobby"

[node name="JoinLobby" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Join lobby"

[node name="Exit" type="Button" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Exit"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Registration" parent="CanvasLayer" instance=ExtResource("2_8mcyk")]

[node name="Authentication" parent="CanvasLayer" instance=ExtResource("3_evs2v")]

[node name="CloseAuth" type="Button" parent="CanvasLayer"]
offset_left = 903.0
offset_top = 170.0
offset_right = 990.0
offset_bottom = 211.0
text = "Close"

[connection signal="pressed" from="ColorRect/test" to="." method="_on_test_pressed"]
[connection signal="toggled" from="ColorRect/test" to="." method="_on_test_toggled"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/CreateLobby" to="." method="_on_create_lobby_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/JoinLobby" to="." method="_on_join_lobby_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="shange_on_login" from="CanvasLayer/Registration" to="." method="_on_registration_shange_on_login"]
[connection signal="change_to_login" from="CanvasLayer/Authentication" to="." method="_on_authentication_change_to_login"]
[connection signal="pressed" from="CanvasLayer/CloseAuth" to="." method="_on_close_auth_pressed"]
